tree-sitter-outrun/grammar.js
    source_file: $ => repeat($.item),

    // Top-level items
    item: $ => choice(
      $.struct_definition,
      $.trait_definition,
      $.impl_block,
      $.function_definition,
      $.constant_definition,
      $.let_binding,
      $.alias_definition,
      $.macro_definition,
      $.import_definition
    ),

    // Comments
    function_definition: $ => seq(
      repeat($.attribute),
      choice('def', 'defp'),
      $.identifier,
      '(',
      optional($.parameter_list),
      ')',
      optional($.return_type),
      optional($.guard_clause),
      $.block
    ),

    parameter_list: $ => seq(
      $.parameter,
      repeat(seq(',', $.parameter)),
      optional(',')
    ),

    parameter: $ => seq(
      $.identifier,
      ':',
      $.type_annotation
    ),

    return_type: $ => seq(':', $.type_annotation),

    // Guard System
    guard_clause: $ => seq('when', $.guard_expression),

    guard_expression: $ => choice(
      $.expression,
      $.binary_guard_expression,
      seq('(', $.guard_expression, ')')
    ),

    generic_args: $ => seq(
      '<',
      $.type_annotation,
      repeat(seq(',', $.type_annotation)),
      optional(','),
      '>'
    ),

    // Types
    type_annotation: $ => choice(
      seq($.module_path, optional($.generic_args)),
      $.tuple_type,
      $.function_type,
      'Self'
    ),

    tuple_type: $ => seq(
      '(',
      optional(seq(
        $.type_annotation,
        repeat(seq(',', $.type_annotation)),
        optional(',')
      )),
      ')'
    ),

    module_path: $ => seq(
      $.type_identifier,
      repeat(seq('.', $.type_identifier))
    ),

    // Macro Definition
    expression: $ => $._pipe_expression,

    _pipe_expression: $ => prec.left(1, choice(
      $._logical_or_expression,
      $.pipe_expression
    )),

    _logical_or_expression: $ => prec.left(2, choice(
      $._logical_and_expression,
      $.binary_logical_or
    )),

    binary_logical_or: $ => prec.left(2, seq($._logical_or_expression, '||', $._logical_and_expression)),

    _logical_and_expression: $ => prec.left(3, choice(
      $._equality_expression,
      $.binary_logical_and
    )),

    binary_logical_and: $ => prec.left(3, seq($._logical_and_expression, '&&', $._equality_expression)),

    _equality_expression: $ => prec.left(4, choice(
      $._comparison_expression,
      $.binary_equal,
      $.binary_not_equal
    )),

    _multiplicative_expression: $ => prec.left(11, choice(
      $._exponentiation_expression,
      $.binary_multiply,
      $.binary_divide,
      $.binary_modulo
    )),

    binary_divide: $ => prec.left(11, seq($._multiplicative_expression, '/', $._exponentiation_expression)),
    _exponentiation_expression: $ => prec.right(12, choice(
      $._unary_expression,
      $.binary_exponent
    )),

    function_call: $ => prec(1, seq(
      optional(seq($.module_path, '.')),
      $.identifier,
      '(',
      optional($.argument_list),
      ')'
    )),
    primary_expression: $ => choice(
      $.literal,
      $.identifier,
      $.module_path,
      $.function_call,
      $.function_capture,
      seq('(', $.expression, ')'),
      $.if_expression,
      $.case_expression,
      $.anonymous_function,
      $.struct_literal,
      $.list_literal,
      $.tuple_literal,
      $.map_literal,
      $.macro_injection
    ),

    argument_list: $ => seq(
      $.argument,
      repeat(seq(',', $.argument)),
      optional(',')
    ),

    argument: $ => choice(
      $.spread_argument,
      $.named_argument,
      $.shorthand_argument
    ),

    named_argument: $ => seq(
      $.identifier,
      ':',
      $.expression
    ),

    shorthand_argument: $ => $.identifier,

    // Literals
    literal: $ => choice(
      $.integer,
      $.float,
      $.string,
      $.multiline_string,
      $.atom,
      $.sigil,
      $.boolean
    ),

    integer: $ => choice(
      /[0-9]+/,                    // Decimal
      /0b[01]+/,                   // Binary
      /0o[0-7]+/,                  // Octal
      /0x[0-9a-fA-F]+/            // Hexadecimal
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        $.interpolation,
        $.escape_sequence,
        $.string_content
      )),
      '"'
    ),

    string_content: $ => token.immediate(/[^"\\#]+/),
    
    boolean: $ => choice('true', 'false'),

    // Collection Literals
    list_literal: $ => seq(
      '[',
      optional(seq(
        $.expression,
        repeat(seq(',', $.expression)),
        optional(',')
      )),
      ']'
    ),

    block: $ => seq('{', repeat($.statement), '}'),

    statement: $ => choice(
      $.expression,
      $.let_binding,
      $.constant_definition
    ),

    // Variable Binding
    let_binding: $ => seq(
      'let',
      choice(
        seq($.identifier, ':', $.type_annotation, '=', $.expression),
        seq($.identifier, '=', $.expression),
        seq($.destructure_pattern, '=', $.expression)
      )
    ),

    identifier: $ => /[a-z_][a-zA-Z0-9_]*\??/,
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/
  }
});
