tree-sitter-outrun/test/corpus/functions_calls_nested_complex.txt
================
Complex nested function calls
================

def process_user_data() {
    let result = Database.find(
        table: "users",
        where: Query.and(
            conditions: [
                Query.equals(field: "active", value: true),
                Query.in_range(
                    field: "age", 
                    min: User.minimum_age(), 
                    max: Config.get(key: "max_user_age", default: 100)
                ),
                Query.matches(
                    field: "email",
                    pattern: Regex.compile(
                        pattern: Email.validation_pattern(),
                        flags: [Regex.case_insensitive(), Regex.multiline()]
                    )
                )
            ]
        ),
        order_by: Sort.desc(field: "created_at"),
        limit: Pagination.calculate(
            page: Request.get_param(name: "page", default: 1),
            per_page: Settings.per_page(context: "users")
        )
    )

    let transformed = User.transform(
        user: result,
        include_permissions: Auth.can_view_permissions?(
            user: Current.user(),
            target: result
        ),
        format: Response.format_for(
            user_agent: Request.header(name: "User-Agent"),
            accept: Request.header(name: "Accept")
        )
    )

    Privacy.is_visible?(
        data: transformed,
        viewer: Current.user(),
        context: Permission.context_for(action: "view_user_list")
    )
}

---

(source_file
  (item
    (function_definition
      (identifier)
      (block
        (statement
          (let_binding
            (identifier)
            (expression
              (primary_expression
                (function_call
                  (module_path
                    (type_identifier))
                  (identifier)
                  (argument_list
                    (argument
                      (named_argument
                        (identifier)
                        (expression
                          (primary_expression
                            (literal
                              (string
                                (string_content)))))))
                    (argument
                      (named_argument
                        (identifier)
                        (expression
                          (primary_expression
                            (function_call
                              (module_path
                                (type_identifier))
                              (identifier)
                              (argument_list
                                (argument
                                  (named_argument
                                    (identifier)
                                    (expression
                                      (primary_expression
                                        (list_literal
                                          (expression
                                            (primary_expression
                                              (function_call
                                                (module_path
                                                  (type_identifier))
                                                (identifier)
                                                (argument_list
                                                  (argument
                                                    (named_argument
                                                      (identifier)
                                                      (expression
                                                        (primary_expression
                                                          (literal
                                                            (string
                                                              (string_content)))))))
                                                  (argument
                                                    (named_argument
                                                      (identifier)
                                                      (expression
                                                        (primary_expression
                                                          (literal
                                                            (boolean))))))))))
                                          (expression
                                            (primary_expression
                                              (function_call
                                                (module_path
                                                  (type_identifier))
                                                (identifier)
                                                (argument_list
                                                  (argument
                                                    (named_argument
                                                      (identifier)
                                                      (expression
                                                        (primary_expression
                                                          (literal
                                                            (string
                                                              (string_content)))))))
                                                  (argument
                                                    (named_argument
                                                      (identifier)
                                                      (expression
                                                        (primary_expression
                                                          (function_call
                                                            (module_path
                                                              (type_identifier))
                                                            (identifier))))))
                                                  (argument
                                                    (named_argument
                                                      (identifier)
                                                      (expression
                                                        (primary_expression
                                                          (function_call
                                                            (module_path
                                                              (type_identifier))
                                                            (identifier)
                                                            (argument_list
                                                              (argument
                                                                (named_argument
                                                                  (identifier)
                                                                  (expression
                                                                    (primary_expression
                                                                      (literal
                                                                        (string
                                                                          (string_content)))))))
                                                              (argument
                                                                (named_argument
                                                                  (identifier)
                                                                  (expression
                                                                    (primary_expression
                                                                      (literal
                                                                        (integer))))))))))))))))
                                          (expression
                                            (primary_expression
                                              (function_call
                                                (module_path
                                                  (type_identifier))
                                                (identifier)
                                                (argument_list
                                                  (argument
                                                    (named_argument
                                                      (identifier)
                                                      (expression
                                                        (primary_expression
                                                          (literal
                                                            (string
                                                              (string_content)))))))
                                                  (argument
                                                    (named_argument
                                                      (identifier)
                                                      (expression
                                                        (primary_expression
                                                          (function_call
                                                            (module_path
                                                              (type_identifier))
                                                            (identifier)
                                                            (argument_list
                                                              (argument
                                                                (named_argument
                                                                  (identifier)
                                                                  (expression
                                                                    (primary_expression
                                                                      (function_call
                                                                        (module_path
                                                                          (type_identifier))
                                                                        (identifier))))))
                                                              (argument
                                                                (named_argument
                                                                  (identifier)
                                                                  (expression
                                                                    (primary_expression
                                                                      (list_literal
                                                                        (expression
                                                                          (primary_expression
                                                                            (function_call
                                                                              (module_path
                                                                                (type_identifier))
                                                                              (identifier))))
                                                                        (expression
                                                                          (primary_expression
                                                                            (function_call
                                                                              (module_path
                                                                                (type_identifier))
                                                                              (identifier))))))))))))))))))))))))))))))
                    (argument
                      (named_argument
                        (identifier)
                        (expression
                          (primary_expression
                            (function_call
                              (module_path
                                (type_identifier))
                              (identifier)
                              (argument_list
                                (argument
                                  (named_argument
                                    (identifier)
                                    (expression
                                      (primary_expression
                                        (literal
                                          (string
                                            (string_content)))))))))))))
                    (argument
                      (named_argument
                        (identifier)
                        (expression
                          (primary_expression
                            (function_call
                              (module_path
                                (type_identifier))
                              (identifier)
                              (argument_list
                                (argument
                                  (named_argument
                                    (identifier)
                                    (expression
                                      (primary_expression
                                        (function_call
                                          (module_path
                                            (type_identifier))
                                          (identifier)
                                          (argument_list
                                            (argument
                                              (named_argument
                                                (identifier)
                                                (expression
                                                  (primary_expression
                                                    (literal
                                                      (string
                                                        (string_content)))))))
                                            (argument
                                              (named_argument
                                                (identifier)
                                                (expression
                                                  (primary_expression
                                                    (literal
                                                      (integer))))))))))))
                                (argument
                                  (named_argument
                                    (identifier)
                                    (expression
                                      (primary_expression
                                        (function_call
                                          (module_path
                                            (type_identifier))
                                          (identifier)
                                          (argument_list
                                            (argument
                                              (named_argument
                                                (identifier)
                                                (expression
                                                  (primary_expression
                                                    (literal
                                                      (string
                                                        (string_content)))))))))))))))))))))))))
        (statement
          (let_binding
            (identifier)
            (expression
              (primary_expression
                (function_call
                  (module_path
                    (type_identifier))
                  (identifier)
                  (argument_list
                    (argument
                      (named_argument
                        (identifier)
                        (expression
                          (primary_expression
                            (identifier)))))
                    (argument
                      (named_argument
                        (identifier)
                        (expression
                          (primary_expression
                            (function_call
                              (module_path
                                (type_identifier))
                              (identifier)
                              (argument_list
                                (argument
                                  (named_argument
                                    (identifier)
                                    (expression
                                      (primary_expression
                                        (function_call
                                          (module_path
                                            (type_identifier))
                                          (identifier))))))
                                (argument
                                  (named_argument
                                    (identifier)
                                    (expression
                                      (primary_expression
                                        (identifier)))))))))))
                    (argument
                      (named_argument
                        (identifier)
                        (expression
                          (primary_expression
                            (function_call
                              (module_path
                                (type_identifier))
                              (identifier)
                              (argument_list
                                (argument
                                  (named_argument
                                    (identifier)
                                    (expression
                                      (primary_expression
                                        (function_call
                                          (module_path
                                            (type_identifier))
                                          (identifier)
                                          (argument_list
                                            (argument
                                              (named_argument
                                                (identifier)
                                                (expression
                                                  (primary_expression
                                                    (literal
                                                      (string
                                                        (string_content)))))))))))))
                                (argument
                                  (named_argument
                                    (identifier)
                                    (expression
                                      (primary_expression
                                        (function_call
                                          (module_path
                                            (type_identifier))
                                          (identifier)
                                          (argument_list
                                            (argument
                                              (named_argument
                                                (identifier)
                                                (expression
                                                  (primary_expression
                                                    (literal
                                                      (string
                                                        (string_content)))))))))))))))))))))))))
        (statement
          (expression
            (primary_expression
              (function_call
                (module_path
                  (type_identifier))
                (identifier)
                (argument_list
                  (argument
                    (named_argument
                      (identifier)
                      (expression
                        (primary_expression
                          (identifier)))))
                  (argument
                    (named_argument
                      (identifier)
                      (expression
                        (primary_expression
                          (function_call
                            (module_path
                              (type_identifier))
                            (identifier))))))
                  (argument
                    (named_argument
                      (identifier)
                      (expression
                        (primary_expression
                          (function_call
                            (module_path
                              (type_identifier))
                            (identifier)
                            (argument_list
                              (argument
                                (named_argument
                                  (identifier)
                                  (expression
                                    (primary_expression
                                      (literal
                                        (string
                                          (string_content))))))))))))))))))))))
